crates/emitter-axios/tests/snapshots/snapshots__snapshot_anyof_plain_axios.snap
---
source: crates/emitter-axios/tests/snapshots.rs
expression: emit_axios(yaml)
---
// Generated by oa-forge. Do not edit.

import type { searchResponse, searchBody, listNotificationsResponse } from './types.gen';
import type { AxiosInstance, AxiosRequestConfig } from 'axios';
import axios from 'axios';

let _instance: AxiosInstance = axios.create();

export function setAxiosInstance(instance: AxiosInstance) {
  _instance = instance;
}

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export async function search(body: searchBody, config?: AxiosRequestConfig): Promise<searchResponse> {
  const { data } = await _instance.post<searchResponse>(`/search`, body, config);
  return data;
}

export async function listNotifications(config?: AxiosRequestConfig): Promise<listNotificationsResponse> {
  const { data } = await _instance.get<listNotificationsResponse>(`/notifications`, config);
  return data;
}
