crates/emitter-axios/tests/snapshots/snapshots__snapshot_coverage_gaps_axios.snap
---
source: crates/emitter-axios/tests/snapshots.rs
expression: emit_axios(yaml)
---
// Generated by oa-forge. Do not edit.

import type { listItemsQueryParams, listItemsResponse, getItemPathParams, getItemResponse } from './types.gen';
import type { AxiosInstance, AxiosRequestConfig } from 'axios';
import axios from 'axios';

let _instance: AxiosInstance = axios.create();

export function setAxiosInstance(instance: AxiosInstance) {
  _instance = instance;
}

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export async function listItems(queryParams?: listItemsQueryParams, config?: AxiosRequestConfig): Promise<listItemsResponse> {
  const { data } = await _instance.get<listItemsResponse>(`/items${buildQuery(queryParams as Record<string, unknown>)}`, config);
  return data;
}

export async function getItem(pathParams: getItemPathParams, config?: AxiosRequestConfig): Promise<getItemResponse> {
  const { data } = await _instance.get<getItemResponse>(`/items/${pathParams.itemId}`, config);
  return data;
}
