crates/emitter-axios/tests/snapshots/snapshots__snapshot_edge_cases_axios.snap
---
source: crates/emitter-axios/tests/snapshots.rs
expression: emit_axios(yaml)
---
// Generated by oa-forge. Do not edit.

import type { Get__no-operation-idResponse, replaceAllVoidBody, noParamSchemaQueryParams, noParamSchemaResponse, deeplyNestedResponse, nullableArrayResponse, enumOnlyResponseResponse, emptyObjectBodyResponse, emptyObjectBodyBody, multipleSuccessCodesResponse, multipleSuccessCodesBody } from './types.gen';
import type { AxiosInstance, AxiosRequestConfig } from 'axios';
import axios from 'axios';

let _instance: AxiosInstance = axios.create();

export function setAxiosInstance(instance: AxiosInstance) {
  _instance = instance;
}

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export async function Get__no-operation-id(config?: AxiosRequestConfig): Promise<Get__no-operation-idResponse> {
  const { data } = await _instance.get<Get__no-operation-idResponse>(`/no-operation-id`, config);
  return data;
}

export async function emptyResponses(config?: AxiosRequestConfig): Promise<void> {
  const { data } = await _instance.post<void>(`/empty-responses`, undefined, config);
}

export async function replaceAllVoid(body: replaceAllVoidBody, config?: AxiosRequestConfig): Promise<void> {
  const { data } = await _instance.put<void>(`/all-void`, body, config);
}

export async function deleteAllVoid(config?: AxiosRequestConfig): Promise<void> {
  const { data } = await _instance.delete<void>(`/all-void`, config);
}

export async function noParamSchema(queryParams?: noParamSchemaQueryParams, config?: AxiosRequestConfig): Promise<noParamSchemaResponse> {
  const { data } = await _instance.get<noParamSchemaResponse>(`/no-param-schema${buildQuery(queryParams as Record<string, unknown>)}`, config);
  return data;
}

export async function deeplyNested(config?: AxiosRequestConfig): Promise<deeplyNestedResponse> {
  const { data } = await _instance.get<deeplyNestedResponse>(`/deeply-nested`, config);
  return data;
}

export async function onlyErrorResponse(config?: AxiosRequestConfig): Promise<void> {
  const { data } = await _instance.get<void>(`/only-error-response`, config);
}

export async function nullableArray(config?: AxiosRequestConfig): Promise<nullableArrayResponse> {
  const { data } = await _instance.get<nullableArrayResponse>(`/nullable-array`, config);
  return data;
}

export async function enumOnlyResponse(config?: AxiosRequestConfig): Promise<enumOnlyResponseResponse> {
  const { data } = await _instance.get<enumOnlyResponseResponse>(`/enum-only-response`, config);
  return data;
}

export async function emptyObjectBody(body: emptyObjectBodyBody, config?: AxiosRequestConfig): Promise<emptyObjectBodyResponse> {
  const { data } = await _instance.post<emptyObjectBodyResponse>(`/empty-object-body`, body, config);
  return data;
}

export async function textResponse(config?: AxiosRequestConfig): Promise<string> {
  const { data } = await _instance.get<string>(`/text-response`, { ...config, responseType: 'text' });
  return data;
}

export async function blobResponse(config?: AxiosRequestConfig): Promise<Blob> {
  const { data } = await _instance.get<Blob>(`/blob-response`, { ...config, responseType: 'blob' });
  return data;
}

export async function multipleSuccessCodes(body: multipleSuccessCodesBody, config?: AxiosRequestConfig): Promise<multipleSuccessCodesResponse> {
  const { data } = await _instance.post<multipleSuccessCodesResponse>(`/multiple-success-codes`, body, config);
  return data;
}
