crates/emitter-axios/tests/snapshots/snapshots__snapshot_error_responses_axios.snap
---
source: crates/emitter-axios/tests/snapshots.rs
expression: emit_axios(yaml)
---
// Generated by oa-forge. Do not edit.

import type { listUsersQueryParams, listUsersResponse, listUsersError, createUserResponse, createUserBody, createUserError, getUserPathParams, getUserResponse, getUserError, deleteUserPathParams, deleteUserError } from './types.gen';
import type { AxiosInstance, AxiosRequestConfig } from 'axios';
import axios from 'axios';

let _instance: AxiosInstance = axios.create();

export function setAxiosInstance(instance: AxiosInstance) {
  _instance = instance;
}

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export async function listUsers(queryParams?: listUsersQueryParams, config?: AxiosRequestConfig): Promise<listUsersResponse> {
  const { data } = await _instance.get<listUsersResponse>(`/users${buildQuery(queryParams as Record<string, unknown>, { tags: 'comma' })}`, config);
  return data;
}

export async function createUser(body: createUserBody, config?: AxiosRequestConfig): Promise<createUserResponse> {
  const { data } = await _instance.post<createUserResponse>(`/users`, body, config);
  return data;
}

export async function getUser(pathParams: getUserPathParams, config?: AxiosRequestConfig): Promise<getUserResponse> {
  const { data } = await _instance.get<getUserResponse>(`/users/${pathParams.userId}`, config);
  return data;
}

export async function deleteUser(pathParams: deleteUserPathParams, config?: AxiosRequestConfig): Promise<void> {
  const { data } = await _instance.delete<void>(`/users/${pathParams.userId}`, config);
}
