crates/emitter-axios/tests/snapshots/snapshots__snapshot_multipart_paginated_axios.snap
---
source: crates/emitter-axios/tests/snapshots.rs
expression: emit_axios(yaml)
---
// Generated by oa-forge. Do not edit.

import type { uploadFileResponse, uploadFileBody, listItemsQueryParams, listItemsResponse, listCursoredQueryParams, listCursoredResponse, updateTextBody } from './types.gen';
import type { AxiosInstance, AxiosRequestConfig } from 'axios';
import axios from 'axios';

let _instance: AxiosInstance = axios.create();

export function setAxiosInstance(instance: AxiosInstance) {
  _instance = instance;
}

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export async function uploadFile(body: uploadFileBody, config?: AxiosRequestConfig): Promise<uploadFileResponse> {
  const fd = new FormData();
  for (const [k, v] of Object.entries(body as Record<string, unknown>)) {
    if (v instanceof Blob) fd.append(k, v);
    else if (v !== undefined) fd.append(k, String(v));
  }
  const { data } = await _instance.post<uploadFileResponse>(`/upload`, fd, config);
  return data;
}

export async function listItems(queryParams?: listItemsQueryParams, config?: AxiosRequestConfig): Promise<listItemsResponse> {
  const { data } = await _instance.get<listItemsResponse>(`/items${buildQuery(queryParams as Record<string, unknown>)}`, config);
  return data;
}

export async function listCursored(queryParams?: listCursoredQueryParams, config?: AxiosRequestConfig): Promise<listCursoredResponse> {
  const { data } = await _instance.get<listCursoredResponse>(`/cursored${buildQuery(queryParams as Record<string, unknown>)}`, config);
  return data;
}

export async function updateText(body: updateTextBody, config?: AxiosRequestConfig): Promise<void> {
  const { data } = await _instance.put<void>(`/text-upload`, body, config);
}
