crates/emitter-axios/tests/snapshots/snapshots__snapshot_petstore_axios.snap
---
source: crates/emitter-axios/tests/snapshots.rs
expression: emit_axios(yaml)
---
// Generated by oa-forge. Do not edit.

import type { listPetsQueryParams, listPetsResponse, createPetResponse, createPetBody, getPetPathParams, getPetResponse, deletePetPathParams } from './types.gen';
import type { AxiosInstance, AxiosRequestConfig } from 'axios';
import axios from 'axios';

let _instance: AxiosInstance = axios.create();

export function setAxiosInstance(instance: AxiosInstance) {
  _instance = instance;
}

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export async function listPets(queryParams?: listPetsQueryParams, config?: AxiosRequestConfig): Promise<listPetsResponse> {
  const { data } = await _instance.get<listPetsResponse>(`/pets${buildQuery(queryParams as Record<string, unknown>)}`, config);
  return data;
}

export async function createPet(body: createPetBody, config?: AxiosRequestConfig): Promise<createPetResponse> {
  const { data } = await _instance.post<createPetResponse>(`/pets`, body, config);
  return data;
}

export async function getPet(pathParams: getPetPathParams, config?: AxiosRequestConfig): Promise<getPetResponse> {
  const { data } = await _instance.get<getPetResponse>(`/pets/${pathParams.petId}`, config);
  return data;
}

export async function deletePet(pathParams: deletePetPathParams, config?: AxiosRequestConfig): Promise<void> {
  const { data } = await _instance.delete<void>(`/pets/${pathParams.petId}`, config);
}
